More copy improvements

--- a/src/jade/includes/header.jade
+++ b/src/jade/includes/header.jade
@@ -22,5 +22,5 @@ header(class='hcard', id='banner', role='banner')
 
   div(class='intro')
     
-    p Hi. I'm Rich, a freelance developer working in Brighton and London. I've over a decade of experience working on projects both large and small, whether with design agencies or directly with clients.
+    p Hi. I'm Rich, a freelance developer based in Brighton. I've over a decade of experience working on web site builds both large and small. While I'm available to work on location in London, my preference is for remote work and I have two years of successful projects with London based agencies in this capability.
 
