--- a/src/jade/includes/highlights.jade
+++ b/src/jade/includes/highlights.jade
@@ -2,7 +2,7 @@ section(class='section', id='career-highlights')
 
   h2 Career Highlights
 
-  p Notable projects I've worked on in the past. I've provided links where the sites still retain the design or code I worked on.
+  p Some notable projects I've worked on during my career.
 
   div
 
@@ -14,7 +14,7 @@ section(class='section', id='career-highlights')
     article(class='highlight')
 
       h3 BBC Trust and BBC UK China
-      p I’ve worked on two projects for the BBC, the first was as lead developer at Wilson Fletcher to build the first version of the BBC Trust site. Later in my career I was hired directly as a contractor to act as the developer in charge of creating the new BBC UK China website.
+      p I’ve worked on two projects for the BBC, the first was as lead developer at Wilson Fletcher to build the first version of the BBC Trust site. Later in my career I was hired by the World Service to act as the front end developer working on the redesign of the BBC UK China website, as well as elements of several other international sites including the launch of BBC Persia.
 
     article(class='highlight')
 
