Expanded on introductory section

--- a/src/jade/includes/header.jade
+++ b/src/jade/includes/header.jade
@@ -22,5 +22,9 @@ header(class='hcard', id='banner', role='banner')
 
   div(class='intro')
     
-    p Hi. I'm Rich, a freelance developer based in Brighton. I've over a decade of experience working on web site builds both large and small. While I'm available to work on location in London, my preference is for remote work and I have two years of successful projects with London based agencies in this capability.
+    p Hi. I'm Rich, a freelance developer based in Brighton. I've over a decade of experience working on web site builds both large and small. 
+
+    p Throughtout my career I've found my role has often expanded beyond the confines of development and into aiding with planning, design and testing, and I enjoy the ability to help where I can with all aspects of a project. 
+
+    p While I'm available to work on location in London, my preference is for remote or partly remote work and I have two years of successful projects with London based agencies in this capability.
 
