--- a/src/jade/includes/header.jade
+++ b/src/jade/includes/header.jade
@@ -14,17 +14,17 @@ header(class='hcard', id='banner', role='banner')
       li
         b(class='u-email') Email:
         a(href='mailto:rich.cookson@gmail.com') rich.cookson@gmail.com
-      li
-        b Location:
-        a(href='https://goo.gl/maps/jtqom')
-          span(class='p-locality') Brighton, 
-          span(class='p-country-name') UK
+      //- li
+      //-   b Location:
+      //-   a(href='https://goo.gl/maps/jtqom')
+      //-     span(class='p-locality') Brighton, 
+      //-     span(class='p-country-name') UK
 
   div(class='intro')
     
-    p Hi. I'm Rich, a freelance developer based in Brighton. I've over a decade of experience working on web site builds both large and small. 
+    p Hi. I'm Rich, a freelance web developer with over a decade of experience, based in Brighton in the UK.
 
     p Throughtout my career I've found my role has often expanded beyond the confines of development and into aiding with planning, design and testing, and I enjoy the ability to help where I can with all aspects of a project. 
 
-    p While I'm available to work on location in London, my preference is for remote or partly remote work and I have two years of successful projects with London based agencies in this capability.
+    p While I'm available to work on location in London, my preference is for remote or partly remote work and I have spent the last two years on successful projects with London based agencies in this capability.
 
