Added hcard assignments to location information in the introduction

--- a/src/jade/includes/header.jade
+++ b/src/jade/includes/header.jade
@@ -22,7 +22,7 @@ header(class='hcard', id='banner', role='banner')
 
   div(class='intro')
     
-    p Hi. I'm Rich, a freelance web developer with over a decade of experience, based in Brighton in the UK.
+    p Hi. I'm Rich, a freelance web developer with over a decade of experience, based in <span class="p-locality">Brighton</span> in the <span class="p-country-name">UK</span>.
 
     p Throughtout my career I've found my role has often expanded beyond the confines of development and into aiding with planning, design and testing, and I enjoy the ability to help where I can with all aspects of a project. 
 
