--- a/src/jade/includes/highlights.jade
+++ b/src/jade/includes/highlights.jade
@@ -2,7 +2,7 @@ section(class='section', id='career-highlights')
 
   h2 Career Highlights
 
-  p As a freelancer I've worked for dozens of companies and agencies throughout London, making a full career history problematically lengthy. In the interests of brevity, here are some notable projects I've worked on during my career.
+  p As a freelancer I've worked for dozens of companies and agencies throughout London, making a full career history somewhat lengthy. In the interests of brevity, here are some of the more notable projects I've worked on during my career.
 
   div
 
