Improved And Finally section

--- a/src/jade/includes/about.jade
+++ b/src/jade/includes/about.jade
@@ -2,4 +2,10 @@ section(class='section', id='about')
 
   h2 And finally
 
-  p Iʼm a big music fan and love going to see bands play live - I’m never happier than when I’m up to my knees in mud at a festival. I also enjoy cycling, films and reading books.
+  p In another life I would probably have been a marine biologist, video game creator or a comic book artist. 
+
+  p Iʼm a big music fan and love going to see bands play live whether at local gigs or festivals. 
+  
+  p More actively I enjoy hiking and cycling around the South Downs.
+
+  p I have seen a ghost, but never a UFO.
