--- a/src/jade/includes/header.jade
+++ b/src/jade/includes/header.jade
@@ -22,11 +22,9 @@ header(class='hcard', id='banner', role='banner')
 
   div(class='intro')
     
-    p Hi. I'm Rich, a web developer based in <span class="p-locality">Brighton</span> in the <span class="p-country-name">UK</span>.
+    p Hi. I'm Rich, a web developer based in <span class="p-locality">Brighton</span> in the <span class="p-country-name">UK</span>  with over a decade of experience.
 
-    p I've been working in the industry for well over a decade now, initially as s staff member with agencies such as Bernard Hodes and Wilson Fletcher, and then as a freelance for a wide range of organiations.
-
-    p Throughtout my career I've found my role has often expanded beyond the confines of development and into aiding with planning, design and testing, and I enjoy the ability to help where I can with all aspects of a project. 
+    p Throughout my career I've found my role has often expanded beyond the confines of development and into aiding with planning, design and testing, and I enjoy the ability to help where I can with all aspects of a project. 
 
     p While I'm available to work on location in London, my preference is for remote or partly remote work and I have spent the last two years on successful projects with London based agencies in this capability.
 
