Improved introduction copy

--- a/src/jade/includes/header.jade
+++ b/src/jade/includes/header.jade
@@ -26,5 +26,5 @@ header(class='hcard', id='banner', role='banner')
 
     p Throughout my career I've found my role has often expanded beyond the confines of development and into aiding with planning, design and testing, and I enjoy the ability to help where I can with all aspects of a project. 
 
-    p While I'm available to work on location in London, my preference is for remote or partly remote work and I have spent the last two years on successful projects with London based agencies in this capability.
+    p While I'm available to work on location in London, my preference is for remote or partly remote work and I've spent the last two years on successful projects with London based agencies in this capability.
 
