Added to about me section

--- a/src/jade/includes/about.jade
+++ b/src/jade/includes/about.jade
@@ -5,7 +5,7 @@ section(class='section', id='about')
   p In another life I would probably have been a marine biologist, video game creator or a comic book artist. 
 
   p Iʼm a big music fan and love going to see bands play live whether at local gigs or festivals. 
-  
-  p More actively I enjoy hiking and cycling around the South Downs.
+
+  p More actively, I enjoy swimming, hiking and cycling around the South Downs.
 
   p I have seen a ghost, but never a UFO.
