Refinements to intro and removed commented out locality info

--- a/src/jade/includes/header.jade
+++ b/src/jade/includes/header.jade
@@ -14,15 +14,10 @@ header(class='hcard', id='banner', role='banner')
       li
         b(class='u-email') Email:
         a(href='mailto:rich.cookson@gmail.com') rich.cookson@gmail.com
-      //- li
-      //-   b Location:
-      //-   a(href='https://goo.gl/maps/jtqom')
-      //-     span(class='p-locality') Brighton, 
-      //-     span(class='p-country-name') UK
 
   div(class='intro')
     
-    p Hi. I'm Rich, a web developer based in <span class="p-locality">Brighton</span> in the <span class="p-country-name">UK</span>  with over a decade of experience.
+    p Hi. I'm Rich, a web developer with over a decade of experience, based in <span class="p-locality">Brighton</span> in the <span class="p-country-name">UK</span>.
 
     p Throughout my career I've found my role has often expanded beyond the confines of development and into aiding with planning, design and testing, and I enjoy the ability to help where I can with all aspects of a project. 
 
