Added Google tracking

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -7,17 +7,18 @@ html(lang='en')
 
   body
 
-  div(id='page')
+    div(id='page')
 
-    include ./includes/header.jade
+      include ./includes/header.jade
 
-    main(role='main')
+      main(role='main')
 
-      include ./includes/skills.jade
+        include ./includes/skills.jade
 
-      include ./includes/projects.jade
+        include ./includes/projects.jade
 
-      include ./includes/highlights.jade
+        include ./includes/highlights.jade
 
-      include ./includes/about.jade
+        include ./includes/about.jade
 
+    include ./includes/tracking-google.jade
