--- a/src/jade/includes/about.jade
+++ b/src/jade/includes/about.jade
@@ -8,4 +8,4 @@ section(class='section', id='about')
 
   p More actively, I enjoy swimming, hiking and cycling around the South Downs.
 
-  p I have seen a ghost, but never a UFO.
+  p I've never a UFO but I have seen a ghost.
