--- a/src/sass/modules/banner.scss
+++ b/src/sass/modules/banner.scss
@@ -6,5 +6,12 @@
     h2 {
       margin-bottom:rem(5);
       margin-top:rem(-10);
+
+      /* Print */
+    
+        @media print {
+          margin-bottom:rem(5);
+          margin-top:rem(-5);
+        }
     }
   }
