--- a/src/sass/screen.scss
+++ b/src/sass/screen.scss
@@ -42,6 +42,7 @@
   @import "layout/address";
   @import "layout/banner";
   @import "layout/intro";
+  @import "layout/latest-projects";
   @import "layout/page";
   @import "layout/section";
 
