--- a/src/sass/modules/banner.scss
+++ b/src/sass/modules/banner.scss
@@ -5,7 +5,12 @@
   #banner {
     h2 {
       margin-bottom:rem(5);
-      margin-top:rem(-10);
+
+      /* Breakpoints */
+
+        @include media($medium) {
+          margin-top:rem(-10);
+        }
 
       /* Print */
     
