Changed list item bullet styling

--- a/src/sass/base/typography.scss
+++ b/src/sass/base/typography.scss
@@ -110,7 +110,8 @@
       color:#565656;
       font-size:rem(16);
       line-height:1.35;
-      list-style:square inside;
+      list-style:square outside;
+      margin-left:rem(20);
 
       /* Breakpoints */
 
