--- a/src/jade/includes/header.jade
+++ b/src/jade/includes/header.jade
@@ -17,9 +17,9 @@ header(class='hcard', id='banner', role='banner')
 
   div(class='intro')
     
-    p Hi. I'm Rich, a web developer with over a decade of experience, based in <span class="p-locality">Brighton</span> in the <span class="p-country-name">UK</span>.
+    p Hi. I'm Rich, a freelance web developer focused mainly on the interface layer of web development.
 
     p Throughout my career I've found my role has often expanded beyond the confines of development and into aiding with planning, design and testing, and I enjoy the ability to help where I can with all aspects of a project. 
 
-    p While I'm available to work on location in London, my preference is for remote or partly remote work and I've spent the last two years on successful projects with London based agencies in this capability.
+    p I'm based in <span class="p-locality">Brighton</span> in the <span class="p-country-name">UK</span> and while I'm available to work in London, my preference is for remote or partly remote work. I've spent the last two years working on successful projects with London based agencies in this capacity.
 
