Improved skills copy

--- a/src/jade/includes/skills.jade
+++ b/src/jade/includes/skills.jade
@@ -2,7 +2,7 @@ section(class='section', id='skills')
 
   h2 Skills
 
-  p While I'm primarily a specialist in front end development, over the years I've gained broad experience in a range of technologies. I'm pretty comfortable with Unix-like command line interfaces, having set up <b>LAMP</b> servers and worked with <b>Yeoman</b>, <b>Bower</b>, <b>Grunt</b> and <b>Git</b>.
+  p While I'm primarily a specialist in front end development, over the years I've gained experience in a wide range of technologies. I'm pretty comfortable with Unix-like command line interfaces, having set up <b>LAMP</b> servers and worked with <b>Yeoman</b>, <b>Bower</b>, <b>Grunt</b> and <b>Git</b>.
 
   div
 
