Improves skills content

--- a/src/jade/includes/skills.jade
+++ b/src/jade/includes/skills.jade
@@ -2,24 +2,31 @@ section(class='section', id='skills')
 
   h2 Skills
 
-  p While I'm primarily a specialist in front end development, over the years I've gained experience in a wide range of technologies. I'm pretty comfortable with Unix-like command line interfaces, having set up <b>LAMP</b> servers and worked with <b>Yeoman</b>, <b>Bower</b>, <b>Grunt</b> and <b>Git</b>.
+  p I'm would consider these my core skills, although I've a good understanding of full stack web development:
 
   div
 
     article(class='skill')
 
       h3 HTML
-      p I strive to produce semantic, minimalist and standards compliant markup where I'm able. In addition I've had extensive experience working to high accessibility standards, and have a good knowledge of localisation issues gained largely from my time at the BBC World Service.
+      p I can produce semantic, minimalist, standards compliant markup to high accessibility standards, and have a good knowledge of localisation as it pertains to HTML having worked on numerous international projects.
       p Beyond simply coding markup, I've worked with a variety of templating systems and CMS theme engines to integrate my code into production environments.
 
     article(class='skill')
 
       h3 CSS
-      p I produce CSS to the <b>SMACSS</b> methodology, utilising the <b>SASS</b> pre-processor and mixin libraries such as <b>Bourbon</b> and <b>Neat</b>. I've recent experience with responsive web design projects and mobile first development.
-      p My experience with CSS dates back to the days of IE5, and I've worked around innumerable browser bugs, quirks and inconsistencies over the years.
+      p I code CSS to the <b>SMACSS</b> methodology, utilising the <b>SASS</b> and mixin libraries such as <b>Bourbon</b> and <b>Neat</b>. I've recent experience with responsive web design projects and mobile first development.
 
     article(class='skill')
 
       h3 JavaScript
-      p I'm a competent JavaScript coder mainly working with the <b>jQuery</b> library and developing plugins for various user interface enhancements for web sites.
-      p I don't currently consider myself a web application developer, although I'm working on an <b>Angular.js</b> side project to broaden my capabilties.
+      p I'm a competent JavaScript coder working with the <b>jQuery</b> library and developing plugins for various user interface enhancements for web sites.
+
+    article(class='skill')
+
+      h3 Additional skills
+      p Over the years I've gained experience in a wide range of technologies tangental to my main role:
+      ul
+        li I've led teams as lead developer both as a permanent staff member and during freelance work.
+        li While I'm not a great aesthetic designer, I've a good understanding of user experience focused design.
+        li Comfortable with the command line, I've set up  <b>LAMP</b> servers and worked with <b>Yeoman</b>, <b>Bower</b>, <b>Grunt</b> and <b>Git</b>.
