Improves skills content

--- a/src/jade/includes/skills.jade
+++ b/src/jade/includes/skills.jade
@@ -27,6 +27,6 @@ section(class='section', id='skills')
       h3 Additional skills
       p Over the years I've gained experience in a wide range of technologies tangental to my main role:
       ul
-        li I've led teams as lead developer both as a permanent staff member and during freelance work.
+        li I've led teams as lead developer, both as a permanent staff member and during freelance work.
         li While I'm not a great aesthetic designer, I've a good understanding of user experience focused design.
         li Comfortable with the command line, I've set up  <b>LAMP</b> servers and worked with <b>Yeoman</b>, <b>Bower</b>, <b>Grunt</b> and <b>Git</b>.
