--- a/src/jade/includes/skills.jade
+++ b/src/jade/includes/skills.jade
@@ -2,7 +2,7 @@ section(class='section', id='skills')
 
   h2 Skills
 
-  p I'm would consider these my core skills, although I've a good understanding of full stack web development:
+  p I would consider these my core skills, although I've a good understanding of full stack web development:
 
   div
 
