--- a/src/jade/includes/projects.jade
+++ b/src/jade/includes/projects.jade
@@ -2,7 +2,7 @@ section(class='section', id='latest-projects')
 
   h2 Latest Projects
 
-  p These are my most recent pieces of work. I'm still working on them to some extent, whether that involves bug fixes, optimisation work or design refinements.
+  p These are the most recent pieces of work I can show. I'm still working on them to some extent, whether that involves bug fixes, optimisation work or design refinements.
 
   div
 
