--- a/src/jade/includes/skills.jade
+++ b/src/jade/includes/skills.jade
@@ -2,7 +2,7 @@ section(class='section', id='skills')
 
   h2 Skills
 
-  p I would consider these my core skills, although I've a good understanding of full stack web development:
+  p I'm would consider these my core skills, although I've a good understanding of full stack web development:
 
   div
 
@@ -15,7 +15,7 @@ section(class='section', id='skills')
     article(class='skill')
 
       h3 CSS
-      p I code CSS to the <b>SMACSS</b> methodology, utilising the <b>SASS</b> and mixin libraries such as <b>Bourbon</b> and <b>Neat</b>. I've recent experience with responsive web design projects and mobile first development.
+      p I code CSS to the <b>SMACSS</b> methodology, utilising <b>SASS</b> and mixin libraries such as <b>Bourbon</b> and <b>Neat</b>. I've recent experience with responsive web design projects and mobile first development.
 
     article(class='skill')
 
