Updated content and changed github id

--- a/src/jade/includes/skills.jade
+++ b/src/jade/includes/skills.jade
@@ -20,13 +20,14 @@ section(class='section', id='skills')
     article(class='skill')
 
       h3 JavaScript
-      p I'm a competent JavaScript coder working with the <b>jQuery</b> library and developing plugins for various user interface enhancements for web sites.
+      p While I wouldn't describe myself as a JavaScript developer I'm competent enough working with JavaScript, predominantly using the <b>jQuery</b> library, integrating and developing plugins for various user interface enhancements for web sites.
 
     article(class='skill')
 
       h3 Additional skills
       p Over the years I've gained experience in a wide range of technologies tangental to my main role:
       ul
-        li I've led teams as lead developer, both as a permanent staff member and during freelance work.
-        li While I'm not a great aesthetic designer, I've a good understanding of user experience focused design.
-        li Comfortable with the command line, I've set up  <b>LAMP</b> servers and worked with <b>Yeoman</b>, <b>Bower</b>, <b>Grunt</b> and <b>Git</b>.
+        li I've led teams as lead developer, both as a permanent staff member and during freelance work, and been involved in recruitment while building development teams.
+        li I've excellent communication skills whether in person or online.
+        li Comfortable working with designs provided in Sketch or Photoshop.
+        li Familiar with the command line, I've set up my own web servers and worked with <b>Yeoman</b>, <b>Bower</b>, <b>Grunt</b> and <b>Git</b>.
