--- a/src/jade/includes/about.jade
+++ b/src/jade/includes/about.jade
@@ -2,10 +2,8 @@ section(class='section', id='about')
 
   h2 And finally
 
-  p In another life I would probably have been a marine biologist, video game creator or a comic book artist. 
+  p Iʼm a big music fan and love going to see bands play live whether at local gigs or festivals. I’ve also been playing video games since the days of the first home computers and retain an interest in how they drive technology forwards.
 
-  p Iʼm a big music fan and love going to see bands play live whether at local gigs or festivals. 
-
-  p More actively, I enjoy swimming, hiking and cycling around the South Downs.
-
-  p I've never seen a UFO but I have seen a ghost.
+  p More actively, I enjoy hiking the coast and countryside around Brighton.
+  
+  p I've never seen a UFO but I have (possibly) seen a ghost.
