--- a/src/jade/includes/header.jade
+++ b/src/jade/includes/header.jade
@@ -7,7 +7,7 @@ header(class='hcard', id='banner', role='banner')
     ul
       li
         b Github:
-        a(href='https://github.com/Frobitz') www.github.com/Frobitz
+        a(href='https://github.com/hellorich') www.github.com/hellorich
       li
         b(class='p-tel') Phone:
         a(href='tel:+447792871698') +44 7792&nbsp;871698
@@ -17,7 +17,7 @@ header(class='hcard', id='banner', role='banner')
 
   div(class='intro')
     
-    p Hi. I'm Rich, a freelance web developer with over fifteen years experience focused mainly on the interface layer of web development.
+    p Hi. I'm Rich, a freelance web developer with over sixteen years experience focused mainly on the interface layer of web development.
 
     p Throughout my career I've found my role has often expanded beyond the confines of development and into aiding with planning, design and testing, and I enjoy the ability to help where I can with all aspects of a project. 
 
