--- a/src/jade/includes/projects.jade
+++ b/src/jade/includes/projects.jade
@@ -17,8 +17,7 @@ section(class='section', id='latest-projects')
         li Utilised Grunt for task management.
         li Integrated HTML and CSS code into a working Wordpress theme.
         li Set up a complex Wordpress installation to match the requirements of the site structure.
-        li Imported and refactored content from the previous verson of the web site.
-        li Continuing support and development ongoing.
+        li Imported and refactored content from the previous version of the web site.
 
     article(class='project')
 
@@ -27,19 +26,15 @@ section(class='section', id='latest-projects')
       p A one page web site to introduce potential customers to 5K, replacing a simple placeholder site. It has since been expanded on to add a blog and Wordpress content control so there's some optimisation and integration problems to be ironed out.
       ul
         li CSS generated with SASS, using the Bourbon mixin library and Neat grid system.
-        li Responsive design.
         li Refined front end code to work responsively in variety of viewport and device sizes as required by the designs.
-        li Continuing support and optimisation ongoing following work done to integrate into Wordpress by third party.
 
     article(class='project')
 
       h3
-        a(href='https://github.com/Frobitz/go') www.github.com/Frobitz/go
+        a(href='https://github.com/hellorich/go') www.github.com/hellorich/go
       p A personal project to create a quickstart framework for getting web site and prototype template builds underway quickly.
       ul
-        li Uses Grunt to compile Jade and SASS into HTML and CSS.
+        li Uses Grunt to compile Mustache templates and SASS into HTML and CSS.
         li Provides a local server for projects with live reload functionality.
         li Optimises image files automatically.
-        li Integrates Bourbon mixin library to extend SASS.
-        li Integrates Neat grid system for quick, responsive layout creation.
-        li Currently under development.
+        li Integrates Bourbon mixin library to extend SASS, and Neat grid system for quick, responsive layout creation
