--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -22,3 +22,4 @@ html(lang='en')
         include ./includes/about.jade
 
     include ./includes/tracking-gosquared.jade
+    include ./includes/tracking-google.jade
