Added event tracking to GoSquared and moved Google tracking into HEAD

--- a/src/jade/includes/header.jade
+++ b/src/jade/includes/header.jade
@@ -7,13 +7,13 @@ header(class='hcard', id='banner', role='banner')
     ul
       li
         b Github:
-        a(href='https://github.com/hellorich') www.github.com/hellorich
+        a(class='js-github', href='https://github.com/hellorich') www.github.com/hellorich
       li
         b(class='p-tel') Phone:
-        a(href='tel:+447792871698') +44 7792&nbsp;871698
+        a(class='js-phone', href='tel:+447792871698') +44 7792&nbsp;871698
       li
         b(class='u-email') Email:
-        a(href='mailto:rich.cookson@gmail.com') rich.cookson@gmail.com
+        a(class='js-email', href='mailto:rich.cookson@gmail.com') rich.cookson@gmail.com
 
   div(class='intro')
     
