--- a/src/jade/includes/head.jade
+++ b/src/jade/includes/head.jade
@@ -10,3 +10,5 @@ head
 
   link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Lato:400,700,900,400italic')
   link(rel='stylesheet', href='_/styles/screen.css')
+
+  include ./tracking-google.jade
