--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -22,4 +22,11 @@ html(lang='en')
         include ./includes/about.jade
 
     include ./includes/tracking-gosquared.jade
-    include ./includes/tracking-google.jade
+
+    script
+      | var githubLink = document.getElementsByClassName('js-github'),
+      |     phoneLink = document.getElementsByClassName('js-phone'),
+      |     emailLink = document.getElementsByClassName('js-email');
+      | githubLink[0].addEventListener('click', _gs('event', 'Opened Github profile') );
+      | phoneLink[0].addEventListener('click', _gs('event', 'Called me') );
+      | emailLink[0].addEventListener('click', _gs('event', 'Emailed me') );
