--- a/src/jade/includes/skills.jade
+++ b/src/jade/includes/skills.jade
@@ -2,25 +2,28 @@ section(class='section', id='skills')
 
   h2 Skills
 
-  p I would consider these my core skills, although I've a good understanding of full stack web development:
+  p My focus is responsive web design, generally of content based web sites, utilising the following skills::
 
   div
 
     article(class='skill')
 
       h3 HTML
-      p I can produce semantic, minimalist, standards compliant markup to high accessibility standards, and have a good knowledge of localisation as it pertains to HTML having worked on numerous international projects.
-      p Beyond simply coding markup, I've worked with a variety of templating systems and CMS theme engines to integrate my code into production environments.
+      p I can produce semantic, minimalist, standards compliant markup, enhanced with <b>WAI-ARIA 1.0</b> to allow for a high level of accessibility.
+      p Additionally I have a good knowledge of localisation as it pertains to HTML having worked on numerous international projects.
+      p Beyond simply coding markup, I've worked with a variety of template systems, such as Mustache, Pug and Twig.
 
     article(class='skill')
 
       h3 CSS
-      p I code CSS to the <b>SMACSS</b> methodology, utilising <b>SASS</b> and mixin libraries such as <b>Bourbon</b> and <b>Neat</b>. I've recent experience with responsive web design projects and mobile first development.
+      p I can code vanilla CSS with deep experience of dealing with browser inconsistencies and am proficient in both <b>LESS</b> and <b>SASS</b>, and mixin libraries such as Bourbon and Neat, with a good grip on how to produce efficient CSS output using these preprocessors.
+      p I have worked on many large scale projects, creating scalable and maintainable modular code, architected using methodologies including <b>Atomic Design</b> and <b>SMACSS</b>.
 
     article(class='skill')
 
       h3 JavaScript
-      p While I wouldn't describe myself as a JavaScript developer I'm competent enough working with JavaScript, predominantly using the <b>jQuery</b> library, integrating and developing plugins for various user interface enhancements for web sites.
+      p While I wouldn't describe myself as a pure JavaScript developer I'm competent enough working with JavaScript, both plain or with <b>jQuery</b>, and using <b>RequireJS</b> to produce modular, object orientated code.
+      p I'm currently learning <b>ReactJS</b> and would give preference to any role that offers a chance to gain more experience with this library.
 
     article(class='skill')
 
@@ -29,5 +32,7 @@ section(class='section', id='skills')
       ul
         li I've led teams as lead developer, both as a permanent staff member and during freelance work, and been involved in recruitment while building development teams.
         li I've excellent communication skills whether in person or online.
-        li Comfortable working with designs provided in Sketch or Photoshop.
-        li Familiar with the command line, I've set up my own web servers and worked with <b>Yeoman</b>, <b>Bower</b>, <b>Grunt</b> and <b>Git</b>.
+        li Able to work with designs provided in Sketch, Illustrator or Photoshop.
+        li Experienced working with frameworks such as Foundation and Bootstrap to build sites, and extending them where necessary.
+        li Comfortable with the command line, I've set up my own web servers and worked with development environments utilising technologies such as <b>Vagrant</b>, <b>Node.js</b>, <b>Bower</b>, <b>Grunt</b> and <b>Gulp</b>.
+        li Proficient with <b>Git</b>.
