--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -14,10 +14,10 @@ html(lang='en')
       main(role='main')
 
         include ./includes/skills.jade
-        
+
         include ./includes/highlights.jade
 
-        include ./includes/projects.jade
+        include ./includes/history.jade
 
         include ./includes/about.jade
 
