--- a/src/jade/includes/history.jade
+++ b/src/jade/includes/history.jade
@@ -1,29 +1,60 @@
 
 section(class='section', id='career-history')
 
-  h2 Career history
+  h2 Career History
 
-  article(class='project')
-    h3 University of Sussex redesign
-    p An ongoing rolling redesign of a very large content based website to improve the Universities recruitment of new students.
-    ul
-      li Upgraded code to use latest version of Foundation 6 and removed old custom code in preference for using Foundation components.
-      li Reworked JavaScript to be more modular and fit with Foundation more readily.
-      li Implemented new designs for key pages and improved performance in terms of page load speed and responsive design.
-      li Liased with stakeholders and UX lead at all stages of the project.
+  p Here's what I've been doing for the past year.
 
-  article(class='project')
-    h3 Futurebrand
-    p Replaced lead front end developer midway through a redesign of a healthcare providers web site.
-    ul
-      li Led a small team of two other front end developers in continuing the build of a large number of templates based on Bootstrap.
-      li Worked with the project manager to organise tasks and attended daily Scrum
-      li Worked mostly remotely utilising tools such as Slack to keep in touch with all participants in the project.
+  div
 
-  article(class='project')
-    h3 Futurebrand
-    p Replaced lead front end developer midway through a redesign of a healthcare providers web site.
-    ul
-      li Led a small team of two other front end developers in continuing the build of a large number of templates based on Bootstrap.
-      li Worked with the project manager to organise tasks and attended daily Scrum
-      li Worked mostly remotely utilising tools such as Slack to keep in touch with all participants in the project.
+    article(class='project')
+      h3 Dec 2016 - Jan 2017: University of Sussex redesign
+      p Continuing the  rolling redesign the University's website, focusing on complex course information pages.
+      ul
+        li Produced intial course template featuring complex JavaScript UI features.
+        li Refined the code of the course pages based on UX testing.
+        li Upgraded and tested latest version of Foundation to take advantage of new resposnive features.
+
+    article(class='project')
+      h3 Sep 2016 - Jan 2017: Team lead on large content-focused project for Futurebrand
+      p Replaced lead front end developer midway through a redesign of a healthcare providers web site.
+      ul
+        li Led a small team of two other front end developers in continuing the build of a large number of templates based on Bootstrap.
+        li Worked with the project manager to organise tasks and attended daily Scrum
+        li Worked mostly remotely utilising tools such as Slack to keep in touch with all participants in the project.
+
+    article(class='project')
+      h3 Jul 2016 - Aug 2017: University of Sussex redesign
+      p An ongoing rolling redesign of a very large content based website to improve the Universities recruitment of new students.
+      ul
+        li Upgraded code to use latest version of Foundation 6 and removed old custom code in preference for using Foundation components.
+        li Reworked JavaScript to be more modular and fit with Foundation more readily.
+        li Implemented new designs for key pages and improved performance in terms of page load speed and responsive design.
+        li Liased with stakeholders and UX lead at all stages of the project.
+
+    article(class='project')
+      h3 Jun 2017: JavaScript animation project for LShift.
+      p Created a complex animation to show the purpose of a publishing application utilising Greensock JavaScript animation library.
+
+    article(class='project')
+      h3 May 2016: Dev Ops consultation and prototype work for DeWynters
+      p Covering for a lack of development staff internally, I worked on some small projects for DeWynters and advised on new development systems to replace their aging Dreamweaver/Adobe workflow.
+      ul
+        li Advised on internal procedures for source code control using Git and build automation using Grunt.
+        li Produced initial version of new responsive DeWynters home page and handed it over for testing and completion by internal team.
+
+    article(class='project')
+      h3 Apr 2016: Microsite for a client pitch for Mediacom
+      p Constructed responsive microsite, working closely with project managers and designer, to introduce Mediacoms client to the marketing team they proposed for a pitch.
+      ul
+        li Set up production server from scratch on Linode hosting platform, and sourced domain name for the site.
+        li Implemented simple PHP access control.
+
+    article(class='project')
+      h3 Jan 2016 - Apr 2016: Wallpaper.com navigation redesign and various projects for Time Inc.
+      p Built several possible versions of a new responsive navigation system for Wallpaper.com for UX testing, with final result being deployed.
+      ul
+        li Advised CMS developers on front end matters, accessibility etc.
+        li A/B test code, bug fixes and aided with general maintenance work on Fashion Team properties such as Marie Claire, Look and InStyle.
+        li Worked with Vagrant based development environment and built skills in setting up Vagrant VM’s from scratch.
+        li Utilised Jenkins and Git in a Continuous Integration environment for updating sites with fixes and enhancements.
