Set up typekit fonts and tested our headings work with correct weights and fonts

--- a/src/sass/utilities/settings/_fonts.scss
+++ b/src/sass/utilities/settings/_fonts.scss
@@ -2,5 +2,5 @@
 // Fonts
 // ------------------------------------------------------------------
 
-$body-font: 'Lato', sans-serif;
-$heading-font: 'Lato', sans-serif;
+$body-font: 'lft-etica', sans-serif;
+$heading-font: 'lato', sans-serif;
