--- a/src/mustache/index.mustache
+++ b/src/mustache/index.mustache
@@ -6,6 +6,10 @@
 <body>
   <div id="page">
     <h1>Hello world</h1>
+    <br>
+    <h2>Hello world</h2>
+    <br>
+    <h3>Hello world</h3>
   </div>
 
 {{> partials/foot }}
