--- a/src/mustache/partials/head.mustache
+++ b/src/mustache/partials/head.mustache
@@ -7,5 +7,8 @@
   <meta name="keywords" content="{{{meta.keywords}}}">
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
+  <script src="https://use.typekit.net/opv2wpe.js"></script>
+  <script>try{Typekit.load({ async: true });}catch(e){}</script>
+
   <link rel="stylesheet" href="/assets/css/styles.css">
 </head>
