--- a/src/sass/atoms/_headings.scss
+++ b/src/sass/atoms/_headings.scss
@@ -3,8 +3,9 @@
 // ---------------------------------------------------------------------------------
 
 h1, h2, h3, h4, h5 {
+  @include margin(0);
   font-family: $heading-font;
-  margin: 0;
+  line-height: 1.2;
 }
 
 h1 {
