Added unordered list and global list settings, added note to paragraphs on spacing

--- a/src/sass/atoms/_paragraphs.scss
+++ b/src/sass/atoms/_paragraphs.scss
@@ -3,7 +3,7 @@
 // ---------------------------------------------------------------------------------
 
 p {
-  @include margin(0 null rem(16));
+  @include margin(0 null rem(16)); // [TODO] - This might be a universal spacing so make global?
   color: setColor(neutral, color_gray_20);
   font-size: rem(17);
 }
