--- a/src/sass/manifest.scss
+++ b/src/sass/manifest.scss
@@ -34,4 +34,6 @@
 
 @import 'atoms/body';
 @import 'atoms/headings';
+@import 'atoms/lists';
+@import 'atoms/list-unordered';
 @import 'atoms/paragraphs';
