--- a/src/sass/manifest.scss
+++ b/src/sass/manifest.scss
@@ -34,6 +34,7 @@
 
 @import 'atoms/body';
 @import 'atoms/headings';
+@import 'atoms/hyperlinks';
 @import 'atoms/lists';
 @import 'atoms/list-unordered';
 @import 'atoms/paragraphs';
