Moved standard font size and color settings up cascade to body atom

--- a/src/sass/atoms/_body.scss
+++ b/src/sass/atoms/_body.scss
@@ -3,5 +3,7 @@
 // ---------------------------------------------------------------------------------
 
 body {
+  color: setColor(neutral, color_gray_20);
   font-family: $body-font;
+  font-size: rem(17);
 }
