Set up basic template

--- a/src/mustache/index.mustache
+++ b/src/mustache/index.mustache
@@ -4,7 +4,7 @@
 {{> partials/head }}
 
 <body>
-  <div id="page">
+  <main class="main" role="main">
     <h1>Hello world</h1>
     <br>
     <h2>Hello world</h2>
@@ -20,6 +20,6 @@
     </ul>
     <br>
     <a href="#">Hyperlink</a>
-  </div>
+  </main>
 
 {{> partials/foot }}
