Added duration atom

--- a/src/mustache/index.mustache
+++ b/src/mustache/index.mustache
@@ -20,6 +20,8 @@
     </ul>
     <br>
     <a href="#">Hyperlink</a>
+    <br>
+    <span class="duration"><time datetime="12-2016">December 2016</time> to <time datetime="01-2017">January 2017</time></span>
   </main>
 
 {{> partials/foot }}
