--- a/src/sass/manifest.scss
+++ b/src/sass/manifest.scss
@@ -33,6 +33,7 @@
 // Atoms
 
 @import 'atoms/body';
+@import 'atoms/duration';
 @import 'atoms/headings';
 @import 'atoms/hyperlinks';
 @import 'atoms/lists';
