--- a/src/sass/utilities/libraries/_colors.scss
+++ b/src/sass/utilities/libraries/_colors.scss
@@ -7,6 +7,7 @@ $palettes: (
     color_white: rgb(255, 255, 255),
     color_gray_80: rgb(204, 204, 204),
     color_gray_60: rgb(154, 154, 154),
+    color_gray_50: rgb(128, 128, 128),
     color_gray_40: rgb(103, 103, 103),
     color_gray_20: rgb(52, 52, 52),
     color_black: rgb(0, 0, 0)
