--- a/src/mustache/index.mustache
+++ b/src/mustache/index.mustache
@@ -13,7 +13,7 @@
     <br>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <ul>
+    <ul class="list">
       <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
       <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
       <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
@@ -22,6 +22,14 @@
     <a href="#">Hyperlink</a>
     <br>
     <span class="duration"><time datetime="12-2016">December 2016</time> to <time datetime="01-2017">January 2017</time></span>
+    <nav class="nav-contact">
+      <ul>
+        <li><a class="icon-github" href="#">github/hellorich</a></li>
+        <li><a class="icon-twitter" href="#">twitter/hellorich</a></li>
+        <li><a class="icon-email" href="#">rich.cookson@gmail.com</a></li>
+        <li><a class="icon-telephone" href="#">07792 871 698</a></li>
+      </ul>
+    </nav>
   </main>
 
 {{> partials/foot }}
