--- a/src/sass/atoms/_lists.scss
+++ b/src/sass/atoms/_lists.scss
@@ -4,11 +4,14 @@
 // ---------------------------------------------------------------------------------
 
 ul, ol {
-  @include margin(0 null rem(16)); // [TODO] - This might be a universal spacing so make global?
   list-style-type: none; // 1
   padding-left: 0;
 
-  li {
-    @include margin(null null rem(8));
+  &.list {
+    @include margin(0 null rem(16)); // [TODO] - This might be a universal spacing so make global?
+
+    li {
+      @include margin(null null rem(8));
+    }
   }
 }
